# vs_reactive_control_uav

./: CMakeLists.txt  README.md  package.xml
vs_reactive_control_controller/: CMakeLists.txt  package.xml
vs_reactive_control_controller/include/vs_reactive_control_controller/: Controller.hpp  DynamicsCalculator.hpp  FeatureData.hpp  GradientBasisCalculator.hpp  UtilityFunctions.hpp  VelocityTransformer.hpp  WeightLoader.hpp  controller.hpp
vs_reactive_control_controller/launch/: run.launch
vs_reactive_control_controller/param/: param.yaml  stored_weights_version_2_03_11_2023.mat  stored_weights_version_2_20_10_2023.mat  stored_weights_version_4_20_10_2023.mat
vs_reactive_control_controller/src/: Controller.cpp  DynamicsCalculator.cpp  FeatureData.cpp  GradientBasisCalculator.cpp  UtilityFunctions.cpp  VelocityTransformer.cpp  WeightLoader.cpp  controller.cpp  node.cpp  stored_weights_version_2_03_11_2023.csv  stored_weights_version_2_20_10_2023.csv  stored_weights_version_4_20_10_2023.csv  stored_weights_version_7_21_07_2023.csv
vs_reactive_control_msgs/: CMakeLists.txt  package.xml
vs_reactive_control_rbf_controller/: CMakeLists.txt  package.xml
vs_reactive_control_rbf_controller/include/vs_reactive_control_rbf_controller/: controller.hpp
vs_reactive_control_rbf_controller/launch/: run.launch
vs_reactive_control_rbf_controller/param/: param.yaml  stored_weights_version_7_21_07_2023.mat
vs_reactive_control_rbf_controller/src/: controller.cpp  node.cpp
vs_reactive_control_uav_target_tracking/: CMakeLists.txt  package.xml
vs_reactive_control_uav_target_tracking/include/: controller.hpp
vs_reactive_control_uav_target_tracking/launch/: run.launch
vs_reactive_control_uav_target_tracking/param/: param.yaml
vs_reactive_control_uav_target_tracking/src/: controller.cpp  node.cpp
